[project]
name = "database-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-google-genai>=4.1.2",
    "langgraph>=1.0.5",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "sqlalchemy>=2.0.45",
    "streamlit==1.52.2",
]
